gitops-enterprise-mgmt-base/istio/gateway/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mccp-chart-wkp-ui
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: mccp-chart-nginx-ingress-controller
